# QQbot_Kal-tsit

./: 404.html  AuthSet.py  Changelog.html  Guide.html  Jesse_opt.txt  MessageProcesser.py  README.md  __init__.py  bot2.py  bot2_upload_version.py  commit.sh  database.xlsx  deploy.sh  doctor_init.py  index.html  kaltsit.py  operator_rollbox_bot.py  praise.py  prts.py  readme.py  requirements.txt  squads_init.py  story_xu.py
assets/css/: 0.styles.5ad98f54.css
assets/js/: 2.8999a334.js  3.ea1ce374.js  4.901f98b8.js  5.4b984030.js  6.d51369bd.js  7.42e20341.js  8.2843cdf4.js  9.12504849.js  app.acd40724.js
core/: BotManager.py  Botoff.py  MessageProcesser.py  ModuleRegister.py  Text2Img.py  __init__.py  decos.py
core/config/: BotConfig.py  kaltsit_config.json  modules.json  (+3 more)
database/: Kal-tsit.db  adventureMap.pkl  kaltsitReply.py  table_install.py
doc/: readme.md
docs/: Changelog.md  Guide.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  guide.md  index.html
function/: CardSearch.py  DarkTemple.py  Desk.py  ForcastForTricks.py  Signin.py  StarCraftPVE.py  adventure.py  couplet.py  doctor_init.py  operator_message_get.py  operator_rollbox_bot.py  praise.py  prts.py  squads_init.py  stopRepeat.py  twotwoorder.py
modules/: Couplet.py  DatabaseSearch.py  ForcastForTricks.py  GithubInfo.py  Homework.py  HusGet.py  Nudge.py  Praise.py  Prts.py  Readme.py  Setu.py  StopRepeat.py  StoryDice.py  Sweep.py  Train.py
modules/Signin/signinImageGenerator/: README.md  main.py  pyproject.toml  signLuck.py  util.py
update/: character_table.py  update.sh
(+94 files in other folders)
