[tool.poetry]
name = "sign-in-image-generator"
version = "0.1.0"
description = "一个供qq bot使用的签到打卡图生成器"
authors = ["Redlnn <w731347477@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Redlnn/sign-in-image-generator"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.22.0"
pillow = "^9.0.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = ">=21.1.0"
flake8 = ">=4.0.1"
isort = {extras = ["requirements_deprecated_finder"], version = ">=5.10.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna-tsinghua"
default = false
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.poetry.source]]
name = "aliyun"
default = false
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.poetry.source]]
name = "tencent-cloud"
default = false
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[tool.black]
line-length = 120
target-version = ["py39", "py310"]
safe = true

[tool.isort]
profile = "black"
